cluster1/adpcore-frontdoor-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontdoor-gateway
  namespace: adpcore
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontdoor
  namespace: adpcore
spec:
  hosts:
  - "*"
  gateways:
  - frontdoor-gateway
  http:
  - match:
    - uri:
        exact: "/frontdoor"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: frontdoor
        port:
          number: 80
