cluster1/team1-table-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: table
  namespace: team1
spec:
  host: table
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
