cluster1/team2-testsvc-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: testsvc
  namespace: team2
spec:
  host: testsvc
  subsets:
  - name: v1
    labels:
      version: v1
